# ISIC2024

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  environment_phase2.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
app/: README.md  app.py
app/gallery/: gallery.json
configs/: base.yaml  phase2_convnextv2.yaml  phase2_efficientnetv2.yaml  phase2_eva02.yaml  phase2_swin.yaml  phase2_swin_tabular.yaml
notebooks/: 01_eda.ipynb  02_feature_exploration.ipynb  03_model_comparison.ipynb  04_calibration_analysis.ipynb
report/: generate_figures.py  report.tex
scripts/: ablation.py  deploy_hf.py  deploy_hf.sh  generate_diagram.py  precompute_gallery.py  reproduce.sh
src/isic2024/: config.py  config_phase2.py  train.py  train_image.py  train_stacking.py
src/isic2024/data/: augmentation.py  image_dataset.py  loader.py  preprocess.py
src/isic2024/evaluation/: metrics.py  plots.py
src/isic2024/features/: engineering.py  pipeline.py  selection.py  ugly_duckling.py
src/isic2024/models/: calibration.py  ensemble.py  gbdt.py  image_module.py  losses.py  svm_baseline.py
tests/: conftest.py  test_calibration.py  test_engineering.py  test_ensemble.py  test_gbdt.py  test_loader.py  test_metrics.py  test_plots.py  test_preprocess.py  test_selection.py  test_stacking.py  test_svm.py  test_train.py  test_ugly_duckling.py
