[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isic2024"
version = "0.1.0"
description = "ISIC 2024 Phase 1 — Tabular ML pipeline for skin cancer detection"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=7.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
